[package]
name = "hyperbuf"
version = "0.1.0"
authors = ["Thomas Braun <tbraun96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4.12"
hyperbuf_derive = { path = "../hyperbuf_derive", version = "0.1.0" }
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }
parking_lot = "0.9.0"
async-bincode = "0.4.9"
bincode = "1.1.4"
rayon = "1.1.0"
serde = "1.0.98"
tokio = "0.2.0-alpha.1"

[dev-dependencies]
criterion = "*"
[profile.bench]
debug = true

[[bench]]
name = "benchmarks"
harness = false

